--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,7 @@
     "three": "^0.164.1"
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "vite": "^5.3.3"
   }
 }
